Added another example

--- a/src/events.html
+++ b/src/events.html
@@ -2,12 +2,22 @@
 <html>
   <head>
     <title>RxJS Events Test</title>
+    <style>
+      div {
+        margin-bottom:20px;
+      }
+    </style>
   </head>
 
   <body>
     <div>
       <label for="input">Input field</label>
       <input id="input" type="text">
+    </div>
+
+    <div>
+      <label for="input-throttle">Input field (throttle)</label>
+      <input id="input-throttle" type="text">
     </div>
 
     <div>
